# sales-workflow

./: .gitignore  langgraph.json  launch.json  pyproject.toml
app/: api.py  config.py  container.py  db.py  main.py  seeder.py
app/infra/: llm.py
app/model/: __init__.py  customer.py  order.py  product.py  stock.py
app/repository/: find_customer.py  stock_check.py
app/schema/: chat_state.py  customer.py
app/service/: chat_service.py
