[project]
name = "sales-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dependency-injector>=4.48.3",
    "fastapi>=0.124.0",
    "langchain[google-genai]>=1.1.3",
    "langgraph>=1.0.4",
    "langgraph-cli[inmem]>=0.4.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
